[package]
name = "gpt3_macro"
version = "0.1.0"
authors = ["Maximilian von Gaisberg <git@vongaisberg.de>"]
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
litrs = "0.2.3"
quote = "1.0.10"
reqwest = "0.11.7"
serde_json = "1.0.73"
syn = "1.0.82"
ureq = "2.3.1"
