[package]
name = "gpt3_macro"
version = "0.3.1"
authors = ["Maximilian von Gaisberg <git@vongaisberg.de>"]
edition = "2018"
license = "MIT"
description = "Macro that uses GPT3 codex to generate code at compiletime"
homepage = "https://github.com/vongaisberg/gpt3_macro/"
repository = "https://github.com/vongaisberg/gpt3_macro/"
readme = "README.md"
keywords = ["macro", "machine-learning", "gpt3"]
categories = ["development-tools"]
exclude = [".github/*", ".gitignore"]
[lib]
proc-macro = true


[dependencies]
serde_json = "1.0.73"
ureq = "2.3.1"
